-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.4.0
-
Fix Version/s: 5.6.0 RC
-
Component/s: GUI: OpenGL, Widgets: Widgets and Dialogs
-
Labels:
-
Environment:Windows 7 git Qt 5.4 -opengl desktop
-
Commits:69839e55c13000ee9bf8d8e9d74b70096a92ae51 ,Fix to work for non-created windows 43918feb4adbcd2e7035b5985309eefe2e2f28c6 (qtbase/5.11, 14.3.2018, 5.11)
- No popup, menu or tooltip widgets show up on a QOpenGLWidget/Window if it is in Fullscreen!
This is probably related to QTBUG-7556, however the suggested workaround no longer works!
- Alt+Tab away from a Fullscreen QOpenGLWidget/Window will not bring other windows in front; will change input focus and mouse cursors, but all painting on screen will still be from QOpenGLWidget/Window.
Supplied is a sample, which actually implements the QTBUG-7556 workaround.
- is duplicated by
-
QTBUG-44247 QMenu does no open when a main window which contains QQuickWidget is shown is fullscreen mode
-
- Closed
-
-
QTBUG-49258 Menus stop working when app contains a QOpenGLWidget and is fullscreen
-
- Closed
-
-
QTBUG-41883 Windows: main menu no more active when in fullscreen with qopenglwidget
-
- Closed
-
-
QTBUG-42267 Comboboxes do not work properly in a fullscreen application
-
- Closed
-
-
QTBUG-44441 Maximized (and fullscreen) frameless QML view is a can of worms, when it comes to menu pop-ups (on Windows)
-
- Closed
-
-
QTBUG-47156 Combobox and Menu doesn't work in Full Screen QML
-
- Closed
-
- is related to
-
QTBUG-53515 [Windows]: When showing a window in full screen that contains a stacked widget and a QOpenGL/QuickWidget then the latter will always be on top
-
- Closed
-
-
QTBUG-54749 QQuickView fullscreen is always on top
-
- Closed
-
- relates to
-
QTBUG-7556 Full screen QGLWidget hides all other widgets
-
- Open
-
-
QTBUG-42410 QtQuick fullscreen Window buggy alt-tab and screenshot behaviour
-
- Closed
-
-
QTBUG-61563 If QWebEngineView isFullScreen then HTML select elements do not work
-
- Closed
-
-
QTBUG-67027 Windows: examples\opengl\qopenglwindow\qopenglwindow example does not work in full screen mode
-
- Closed
-
-
QTBUG-66557 Windows/Desktop GL app fails to redraw when Windows 10 screen woken
-
- Closed
-