src/plugins/platforms/windows/qwindowsnativeinterface.cpp
@@ -234,6 +234,8 @@ QFunctionPointer QWindowsNativeInterface::platformFunction(const QByteArray &fun
 {
     if (function == QWindowsWindowFunctions::setTouchWindowTouchTypeIdentifier())
         return QFunctionPointer(QWindowsWindow::setTouchWindowTouchTypeStatic);
+    else if (function == QWindowsWindowFunctions::setHasBorderInFullScreenIdentifier())
+        return QFunctionPointer(QWindowsWindow::setHasBorderInFullScreenStatic);
     return Q_NULLPTR;
 }
 
